@@ -1,5 +1,7 @@
 * SVN *
 
+* Process article permalinks with Iconv.
+
 * Support rel-tag microformat by default in liquid filters
 
 * Make ImageScience the default image processor for assets. 
@@ -46,7 +48,6 @@
   end
 
 * fix that only published articles are available as section pages.
-* SVN *
 
 Add sorting for liquid for statements.
 
